adding error strategy, maxRetries and standard profile inclusion

--- a/conf/standard.config
+++ b/conf/standard.config
@@ -1,4 +1,7 @@
 process {
+    errorStrategy = 'retry'
+    maxRetries = 3
+
     withName:
         "TBREFINE" {
             container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
