--- a/nextflow.config
+++ b/nextflow.config
@@ -6,13 +6,10 @@ manifest {
     mainScript = 'main.nf'
 }
 
-process {
-    errorStrategy = 'retry'
-    maxRetries = 3
-}
-
 
 profiles {
+    standard { includeConfig 'conf/standard.config' }
+
     labbactfiocruz {
 
         params {
