adding a `per_sample` workflow, a stub profile and `mock_data_generator.sh`

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,6 +10,7 @@ manifest {
 profiles {
     standard { includeConfig 'conf/standard.config' }
 
+    stub { includeConfig 'conf/stub.config' }
     labbactfiocruz {
 
         params {
