adding `cohort` workflow, and fixes after stubbing debug

--- a/conf/stub.config
+++ b/conf/stub.config
@@ -5,6 +5,7 @@ gatk38_jar ="${baseDir}/data/mock_data/GenomeAnalysisTK.jar"
 reads ="${baseDir}/data/mock_data/*_R{1,2}.fastq.gz"
 user = "root"
 library_name = "illumina"
+mtbseq_project_name = "stub_project"
 }
 
 
