fixes after stub testing, seems ready for tower action

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,7 @@ manifest {
     name = 'MTBSeq packaged as a Nextflow Workflow for usability and sensible defaults.'
     description = 'Workflow for the MTBSeq for analysis of Mycobacterium tuberculosis.'
     version = '1.0.0'
-    author = 'Abhinav Sharma <abhi18av@outlook.com>; Emilyn Costa Conceição <emilyncosta@gmail.com>'
+    author = 'Emilyn Costa Conceição <emilyncosta@gmail.com> ; Abhinav Sharma <abhi18av@outlook.com>;  Davi Josué Marcon <davijosuemarcon@gmail.com>'
     mainScript = 'main.nf'
 }
 
