--- a/nextflow.config
+++ b/nextflow.config
@@ -2,17 +2,15 @@ manifest {
     name = 'MTBSeq packaged as a Nextflow Workflow for usability and sensible defaults.'
     description = 'Workflow for the MTBSeq for analysis of Mycobacterium tuberculosis.'
     version = '1.0.0'
-    author = 'Abhinav Sharma <abhi18av@outlook.com>; Emilyn Costa Conceição <emilyncosta@gmail.com>'
+    author = 'Emilyn Costa Conceição <emilyncosta@gmail.com> ; Abhinav Sharma <abhi18av@outlook.com>;  Davi Josué Marcon <davijosuemarcon@gmail.com>'
     mainScript = 'main.nf'
-}
-
-process {
-    errorStrategy = 'retry'
-    maxRetries = 3
 }
 
 
 profiles {
+    standard { includeConfig 'conf/standard.config' }
+
+    stub { includeConfig 'conf/stub.config' }
     labbactfiocruz {
 
         params {
