adding a global layer of params

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,6 +6,7 @@ manifest {
     mainScript = 'main.nf'
 }
 
+params {includeConfig 'conf/global_params.config'}
 
 profiles {
     standard { includeConfig 'conf/standard.config' }
