adding `tbfull` global params

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -43,3 +43,11 @@ TBAMEND {
 TBGROUPS {
     project_name = "mtbseq"
 }
+
+TBFULL {
+    minbqual = 13
+    mincovf = 4
+    mincovr = 4
+    minphred = 4
+    minfreq = 75
+}
