reverting modifications as requested on PR

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -1,3 +1,6 @@
+TBBWA {}
+TBREFINE {}
+TBPILE {}
 
 TBLIST {
     minbqual = 13
@@ -10,6 +13,7 @@ TBVARIANTS {
     minfreq = 75
  }
 
+TBSTATS {}
 TBSTRAINS {
     mincovf = 4
     mincovr = 4
