adding 2 new profiles `conda` and `docker` instead of `labbactfiocruz`

--- a/conf/standard.config
+++ b/conf/standard.config
@@ -1,80 +1,75 @@
+params {
+    outdir = "$baseDir/results"
+    gatk38_jar = "$baseDir/resources/GenomeAnalysisTK.jar"
+    reads = "$baseDir/data/full_data/*_{R1,R2}*fastq.gz"
+    }
+
 process {
     errorStrategy = 'retry'
     maxRetries = 3
 
     withName:
         "TBREFINE" {
-            container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
             cpus = 8
             memory = "15 GB"
     }
 
     withName:
         "TBBWA" {
-            container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
             cpus = 8
             memory = "15 GB"
     }
 
     withName:
         "TBVARIANTS" {
-            container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
             cpus = 8
             memory = "15 GB"
     }
 
     withName:
         "TBPILE" {
-            container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
             cpus = 8
             memory = "15 GB"
     }
 
     withName:
         "MTBSEQ" {
-            container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
             cpus = 8
             memory = "15 GB"
     }
 
     withName:
         "TBSTRAINS" {
-            container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
             cpus = 8
             memory = "15 GB"
     }
 
     withName:
         "TBLIST" {
-            container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
             cpus = 8
             memory = "15 GB"
     }
 
     withName:
         "TBSTATS" {
-            container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
             cpus = 8
             memory = "15 GB"
     }
 
     withName:
         "TBAMEND" {
-            container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
             cpus = 8
             memory = "15 GB"
     }
 
     withName:
         "TBGROUPS" {
-            container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
             cpus = 8
             memory = "15 GB"
     }
 
     withName:
         "TBJOIN" {
-            container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
             cpus = 8
             memory = "15 GB"
     }
