--- a/nextflow.config
+++ b/nextflow.config
@@ -6,14 +6,13 @@ manifest {
     mainScript = 'main.nf'
 }
 
-docker.enabled = true
-
 params {includeConfig 'conf/global_params.config'}
 
 profiles {
     standard { includeConfig 'conf/standard.config' }
     stub { includeConfig 'conf/stub.config' }
-    labbactfiocruz { includeConfig 'conf/labbactfiocruz'}
+    docker { includeConfig 'conf/docker.config'}
+    conda { includeConfig 'conf/conda.config' }
     gls { includeConfig 'conf/gcp.config' }
     azureBatch { includeConfig 'conf/azure.config' }
     awsBatch { includeConfig 'conf/aws.config' }
