[ENHANCEMENT]  Cleanup on configurations (#21)
* adding standard configs and cleanup on `nextflow.config`

* adding 2 new profiles `conda` and `docker` instead of `labbactfiocruz`

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,52 +10,12 @@ params {includeConfig 'conf/global_params.config'}
 
 profiles {
     standard { includeConfig 'conf/standard.config' }
-
     stub { includeConfig 'conf/stub.config' }
-    labbactfiocruz {
-
-        params {
-
-            outdir = "$baseDir/results"
-
-            gatk38_jar = "$baseDir/resources/GenomeAnalysisTK.jar"
-
-            reads = "$baseDir/data/full_data/*_{R1,R2}*fastq.gz"
-        }
-
-        docker.enabled = true
-
-        process {
-
-            withName:
-            MTBSEQ {
-                cpus = 8
-                memory = '15 GB'
-            }
-        }
-
-    }
-
-    aws_batch {
-        aws.client.uploadMaxThreads = 4
-    }
-
-    google_cloud_life_sciences {
-        process.executor = 'google-lifesciences'
-        workDir = 'gs://mtbseq-nf-bucket/work/'
-        google.zone = 'eu-west2-b'
-        google.project = 'mtbseq-nf'
-
-        process {
-
-            withName:
-            MTBSEQ {
-                cpus = 8
-                memory = '15 GB'
-            }
-        }
-
-    }
+    docker { includeConfig 'conf/docker.config'}
+    conda { includeConfig 'conf/conda.config' }
+    gls { includeConfig 'conf/gcp.config' }
+    azureBatch { includeConfig 'conf/azure.config' }
+    awsBatch { includeConfig 'conf/aws.config' }
 
 }
 
