Create a central params file

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -1,20 +1,50 @@
-TBBWA {}
-TBREFINE {}
-TBPILE {}
+TBBWA {
+resultsDir = "${params.outdir}/tbbwa"
+saveMode = 'copy'
+shouldPublish = true
+}
+
+TBREFINE {
+resultsDir = "${params.outdir}/tbrefine"
+saveMode = 'copy'
+shouldPublish = true
+}
+
+TBPILE {
+resultsDir = "${params.outdir}/tbpile"
+saveMode = 'copy'
+shouldPublish = true
+}
 
 TBLIST {
-    minbqual = 13
- }
+resultsDir = "${params.outdir}/tblist"
+saveMode = 'copy'
+shouldPublish = true
+minbqual = 13
+}
 
 TBVARIANTS {
+resultsDir = "${params.outdir}/tbvariants"
+saveMode = 'copy'
+shouldPublish = true
     mincovf = 4
     mincovr = 4
     minphred = 4
     minfreq = 75
  }
 
-TBSTATS {}
+TBSTATS {
+
+resultsDir = "${params.outdir}/tbstats"
+saveMode = 'copy'
+shouldPublish = true
+
+}
+
 TBSTRAINS {
+resultsDir = "${params.outdir}/tbstrains"
+saveMode = 'copy'
+shouldPublish = true
     mincovf = 4
     mincovr = 4
     minphred = 4
@@ -22,6 +52,12 @@ TBSTRAINS {
  }
 
 TBJOIN {
+
+
+resultsDir = "${params.outdir}/tbjoin"
+saveMode = 'copy'
+shouldPublish = true
+
     project_name = "mtbseq"
     mincovf = 4
     mincovr = 4
@@ -30,6 +66,10 @@ TBJOIN {
  }
 
 TBAMEND {
+
+resultsDir = "${params.outdir}/tbamend"
+saveMode = 'copy'
+shouldPublish = true
     project_name = "mtbseq"
     mincovf = 4
     mincovr = 4
@@ -41,13 +81,19 @@ TBAMEND {
  }
 
 TBGROUPS {
-    project_name = "mtbseq"
+resultsDir = "${params.outdir}/tbgroups"
+saveMode = 'copy'
+shouldPublish = true
+project_name = "mtbseq"
 }
 
 TBFULL {
-    minbqual = 13
-    mincovf = 4
-    mincovr = 4
-    minphred = 4
-    minfreq = 75
+resultsDir = "${params.outdir}/tbfull"
+saveMode = 'copy'
+shouldPublish = true
+minbqual = 13
+mincovf = 4
+mincovr = 4
+minphred = 4
+minfreq = 75
 }
