Update the params file and test tbbwa

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -1,3 +1,8 @@
+
+genomeIds = ["ERR841438", "ERR841440", "ERR841441"]
+
+apiKey = ""
+
 TBBWA {
 resultsDir = "${params.outdir}/tbbwa"
 saveMode = 'copy'
