minor change: trigger tower action

--- a/conf/standard.config
+++ b/conf/standard.config
@@ -1,7 +1,7 @@
 params {
-    outdir = "$baseDir/results"
-    gatk38_jar = "$baseDir/resources/GenomeAnalysisTK.jar"
-    reads = "$baseDir/data/full_data/*_{R1,R2}*fastq.gz"
+    outdir = "${baseDir}/results"
+    gatk38_jar = "${baseDir}/resources/GenomeAnalysisTK.jar"
+    reads = "${baseDir}/data/full_data/*_{R1,R2}*fastq.gz"
     }
 
 process {
