test with direct download from gcp

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,6 +6,11 @@ manifest {
     mainScript = 'main.nf'
 }
 
+plugins {
+  id 'nf-google'
+  id 'nf-amazon'
+}
+
 params { includeConfig 'conf/global_params.config' }
 
 profiles {
