update the name and trigger test

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 manifest {
-    name = 'MTBSeq packaged as a Nextflow Workflow for usability and sensible defaults.'
-    description = 'Workflow for the MTBSeq for analysis of Mycobacterium tuberculosis.'
+    name = 'MTBseq-nf'
+    description = 'MTBSeq packaged as a Nextflow Workflow for usability and sensible defaults'
     version = '1.0.0'
     author = 'Emilyn Costa Conceição <emilyncosta@gmail.com> ; Abhinav Sharma <abhi18av@outlook.com>;  Davi Josué Marcon <davijosuemarcon@gmail.com>'
     mainScript = 'main.nf'
