add a global library name

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -2,6 +2,8 @@ genomeIds = ["ERR841438", "ERR841440"]
 
 apiKey = ""
 
+library_name = "somelib"
+
 TBBWA {
 resultsDir = "${params.outdir}/tbbwa"
 saveMode = 'copy'
