fix the global paramter file

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -5,34 +5,34 @@ apiKey = ""
 library_name = "somelib"
 
 TBBWA {
-resultsDir = "${params.outdir}/tbbwa"
-saveMode = 'copy'
-shouldPublish = true
+results_dir = "${params.outdir}/tbbwa"
+save_mode = 'copy'
+should_publish = true
 }
 
 TBREFINE {
-resultsDir = "${params.outdir}/tbrefine"
-saveMode = 'copy'
-shouldPublish = true
+results_dir = "${params.outdir}/tbrefine"
+save_mode = 'copy'
+should_publish = true
 }
 
 TBPILE {
-resultsDir = "${params.outdir}/tbpile"
-saveMode = 'copy'
-shouldPublish = true
+results_dir = "${params.outdir}/tbpile"
+save_mode = 'copy'
+should_publish = true
 }
 
 TBLIST {
-resultsDir = "${params.outdir}/tblist"
-saveMode = 'copy'
-shouldPublish = true
+results_dir = "${params.outdir}/tblist"
+save_mode = 'copy'
+should_publish = true
 minbqual = 13
 }
 
 TBVARIANTS {
-resultsDir = "${params.outdir}/tbvariants"
-saveMode = 'copy'
-shouldPublish = true
+results_dir = "${params.outdir}/tbvariants"
+save_mode = 'copy'
+should_publish = true
     mincovf = 4
     mincovr = 4
     minphred = 4
@@ -41,16 +41,16 @@ shouldPublish = true
 
 TBSTATS {
 
-resultsDir = "${params.outdir}/tbstats"
-saveMode = 'copy'
-shouldPublish = true
+results_dir = "${params.outdir}/tbstats"
+save_mode = 'copy'
+should_publish = true
 
 }
 
 TBSTRAINS {
-resultsDir = "${params.outdir}/tbstrains"
-saveMode = 'copy'
-shouldPublish = true
+results_dir = "${params.outdir}/tbstrains"
+save_mode = 'copy'
+should_publish = true
     mincovf = 4
     mincovr = 4
     minphred = 4
@@ -60,9 +60,9 @@ shouldPublish = true
 TBJOIN {
 
 
-resultsDir = "${params.outdir}/tbjoin"
-saveMode = 'copy'
-shouldPublish = true
+results_dir = "${params.outdir}/tbjoin"
+save_mode = 'copy'
+should_publish = true
 
     project_name = "mtbseq"
     mincovf = 4
@@ -73,9 +73,9 @@ shouldPublish = true
 
 TBAMEND {
 
-resultsDir = "${params.outdir}/tbamend"
-saveMode = 'copy'
-shouldPublish = true
+results_dir = "${params.outdir}/tbamend"
+save_mode = 'copy'
+should_publish = true
     project_name = "mtbseq"
     mincovf = 4
     mincovr = 4
@@ -87,16 +87,16 @@ shouldPublish = true
  }
 
 TBGROUPS {
-resultsDir = "${params.outdir}/tbgroups"
-saveMode = 'copy'
-shouldPublish = true
+results_dir = "${params.outdir}/tbgroups"
+save_mode = 'copy'
+should_publish = true
 project_name = "mtbseq"
 }
 
 TBFULL {
-resultsDir = "${params.outdir}/tbfull"
-saveMode = 'copy'
-shouldPublish = true
+results_dir = "${params.outdir}/tbfull"
+save_mode = 'copy'
+should_publish = true
 minbqual = 13
 mincovf = 4
 mincovr = 4
