test global params

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -4,8 +4,10 @@ apiKey = ""
 
 library_name = "somelib"
 
+outdir = ""
+
 TBBWA {
-results_dir = "${params.outdir}/tbbwa"
+results_dir = "${params.outdir}/tbbwa_results"
 save_mode = 'copy'
 should_publish = true
 }
