--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -7,7 +7,7 @@ library_name = "somelib"
 outdir = ""
 
 TBBWA {
-results_dir = "${params.outdir}/tbbwa_results"
+results_dir = "${params.outdir}/tbbwa"
 save_mode = 'copy'
 should_publish = true
 }
