Modify the stdout and stderr for all processes

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -4,39 +4,39 @@ apiKey = ""
 
 library_name = "somelib"
 
-outdir = ""
+outdir = "/scratch/results"
 
 user = "root"
 
 TBBWA {
-results_dir = "${params.outdir}/tbbwa"
-save_mode = 'copy'
-should_publish = true
+    results_dir = "${params.outdir}/tbbwa"
+    save_mode = 'copy'
+    should_publish = true
 }
 
 TBREFINE {
-results_dir = "${params.outdir}/tbrefine"
-save_mode = 'copy'
-should_publish = true
+    results_dir = "${params.outdir}/tbrefine"
+    save_mode = 'copy'
+    should_publish = true
 }
 
 TBPILE {
-results_dir = "${params.outdir}/tbpile"
-save_mode = 'copy'
-should_publish = true
+    results_dir = "${params.outdir}/tbpile"
+    save_mode = 'copy'
+    should_publish = true
 }
 
 TBLIST {
-results_dir = "${params.outdir}/tblist"
-save_mode = 'copy'
-should_publish = true
-minbqual = 13
+    results_dir = "${params.outdir}/tblist"
+    save_mode = 'copy'
+    should_publish = true
+    minbqual = 13
 }
 
 TBVARIANTS {
-results_dir = "${params.outdir}/tbvariants"
-save_mode = 'copy'
-should_publish = true
+    results_dir = "${params.outdir}/tbvariants"
+    save_mode = 'copy'
+    should_publish = true
     mincovf = 4
     mincovr = 4
     minphred = 4
@@ -44,17 +44,15 @@ should_publish = true
  }
 
 TBSTATS {
-
-results_dir = "${params.outdir}/tbstats"
-save_mode = 'copy'
-should_publish = true
-
+    results_dir = "${params.outdir}/tbstats"
+    save_mode = 'copy'
+    should_publish = true
 }
 
 TBSTRAINS {
-results_dir = "${params.outdir}/tbstrains"
-save_mode = 'copy'
-should_publish = true
+    results_dir = "${params.outdir}/tbstrains"
+    save_mode = 'copy'
+    should_publish = true
     mincovf = 4
     mincovr = 4
     minphred = 4
@@ -62,12 +60,9 @@ should_publish = true
  }
 
 TBJOIN {
-
-
-results_dir = "${params.outdir}/tbjoin"
-save_mode = 'copy'
-should_publish = true
-
+    results_dir = "${params.outdir}/tbjoin"
+    save_mode = 'copy'
+    should_publish = true
     project_name = "mtbseq"
     mincovf = 4
     mincovr = 4
@@ -77,9 +72,9 @@ should_publish = true
 
 TBAMEND {
 
-results_dir = "${params.outdir}/tbamend"
-save_mode = 'copy'
-should_publish = true
+    results_dir = "${params.outdir}/tbamend"
+    save_mode = 'copy'
+    should_publish = true
     project_name = "mtbseq"
     mincovf = 4
     mincovr = 4
@@ -91,19 +86,19 @@ should_publish = true
  }
 
 TBGROUPS {
-results_dir = "${params.outdir}/tbgroups"
-save_mode = 'copy'
-should_publish = true
-project_name = "mtbseq"
+    results_dir = "${params.outdir}/tbgroups"
+    save_mode = 'copy'
+    should_publish = true
+    project_name = "mtbseq"
 }
 
 TBFULL {
-results_dir = "${params.outdir}/tbfull"
-save_mode = 'copy'
-should_publish = true
-minbqual = 13
-mincovf = 4
-mincovr = 4
-minphred = 4
-minfreq = 75
+    results_dir = "${params.outdir}/tbfull"
+    save_mode = 'copy'
+    should_publish = true
+    minbqual = 13
+    mincovf = 4
+    mincovr = 4
+    minphred = 4
+    minfreq = 75
 }
