--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -1,5 +1,6 @@
 genomeIds = ["ERR841438", "ERR841440"]
 
+// NCBI API key
 apiKey = ""
 
 library_name = "somelib"
@@ -8,6 +9,10 @@ outdir = "/scratch/results"
 
 user = "root"
 
+local_location = "/scratch/data/single_sample" // or multiple_samples
+
+
+// Module level parameters
 TBBWA {
     results_dir = "${params.outdir}/tbbwa"
     save_mode = 'copy'
