--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -9,6 +9,8 @@ outdir = "/scratch/results"
 
 user = "root"
 
+local_location = "/scratch/data/single_sample" // or multiple_samples
+
 TBBWA {
     results_dir = "${params.outdir}/tbbwa"
     save_mode = 'copy'
