--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -11,6 +11,8 @@ user = "root"
 
 local_location = "/scratch/data/single_sample" // or multiple_samples
 
+
+// Module level parameters
 TBBWA {
     results_dir = "${params.outdir}/tbbwa"
     save_mode = 'copy'
