revert to older contaienr

--- a/conf/docker.config
+++ b/conf/docker.config
@@ -3,6 +3,6 @@ docker.enabled = true
 process {
     withName:
     ".*" {
-    container = 'quay.io/biocontainers/mtbseq:1.0.4--hdfd78af_2'
+    container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
             }
     }
