trigger tbfull test

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -106,4 +106,26 @@ TBFULL {
     mincovr = 4
     minphred = 4
     minfreq = 75
+
+// samples
+// project
+// ref
+// resilist
+// intregions
+// categories
+// basecalib
+// all
+// snp
+// lowfreq
+// minbqual
+// mincovf
+// mincovr
+// minphred
+// minfreq
+// unambig
+// window
+// distance
+// quiet
+// threads
+
 }
