update the samplesheet location and name

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -12,6 +12,9 @@ user = "root"
 local_location = "/scratch/data/single_sample" // or multiple_samples
 
 
+samplesheet_name = "samples.tsv"
+
+
 // Module level parameters
 TBBWA {
     results_dir = "${params.outdir}/tbbwa"
