add a project name

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -9,8 +9,9 @@ outdir = "/scratch/results"
 
 user = "root"
 
-local_location = "/scratch/data/single_sample" // or multiple_samples
+mtbseq_project_name = "project"
 
+local_location = "/scratch/data/single_sample" // or multiple_samples
 
 samplesheet_name = "samples.tsv"
 
