trigger full test

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -9,7 +9,7 @@ outdir = "/scratch/results"
 
 user = "root"
 
-mtbseq_project_name = "projectname"
+project_name = "projectname"
 
 local_location = "/scratch/data/single_sample" // or multiple_samples
 
