test samplesheet_ch channel

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -110,6 +110,9 @@ TBFULL {
     mincovr = 4
     minphred = 4
     minfreq = 75
+    unambig = 95
+    window = 12
+    distance = 12
 
 // samples
 // project
@@ -121,15 +124,6 @@ TBFULL {
 // all
 // snp
 // lowfreq
-// minbqual
-// mincovf
-// mincovr
-// minphred
-// minfreq
-// unambig
-// window
-// distance
 // quiet
-// threads
 
 }
