--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -9,9 +9,9 @@ outdir = "/scratch/results"
 
 user = "root"
 
-project_name = "projectname"
+project_name = "prj"
 
-local_location = "/scratch/data/single_sample" // or multiple_samples
+local_location = "/scratch/data/multiple_samples" // single_sample OR multiple_samples
 
 samplesheet_name = "samples.tsv"
 
@@ -72,7 +72,7 @@ TBJOIN {
     results_dir = "${params.outdir}/tbjoin"
     save_mode = 'copy'
     should_publish = true
-    project_name = "mtbseq"
+    project_name = params.project_name
     mincovf = 4
     mincovr = 4
     minphred = 4
@@ -84,7 +84,7 @@ TBAMEND {
     results_dir = "${params.outdir}/tbamend"
     save_mode = 'copy'
     should_publish = true
-    project_name = "mtbseq"
+    project_name = params.project_name
     mincovf = 4
     mincovr = 4
     minphred = 4
@@ -98,7 +98,7 @@ TBGROUPS {
     results_dir = "${params.outdir}/tbgroups"
     save_mode = 'copy'
     should_publish = true
-    project_name = "mtbseq"
+    project_name = params.project_name
 }
 
 TBFULL {
