test per_sample and cohort workflows

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -13,7 +13,7 @@ project_name = "prj"
 
 local_location = "/scratch/data/multiple_samples" // single_sample OR multiple_samples
 
-samplesheet_name = "samples.tsv"
+samplesheet_name = "${params.project_name}_samples.tsv"
 
 
 // Module level parameters
