update the config for tbstats

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -53,6 +53,7 @@ TBVARIANTS {
  }
 
 TBSTATS {
+    project_name = params.project_name
     results_dir = "${params.outdir}/tbstats"
     save_mode = 'copy'
     should_publish = true
