fix global params for rename_files

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -127,3 +127,9 @@ TBFULL {
 // lowfreq
 // quiet
 }
+
+RENAME_FILES {
+    results_dir = "${params.outdir}/utils/rename_files"
+    save_mode = 'copy'
+    should_publish = true
+}
