flatten and then collect

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -60,6 +60,7 @@ TBSTATS {
 }
 
 TBSTRAINS {
+    project_name = params.project_name
     results_dir = "${params.outdir}/tbstrains"
     save_mode = 'copy'
     should_publish = true
