update the publish dir

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -18,32 +18,32 @@ samplesheet_name = "${params.project_name}_samples.tsv"
 
 // Module level parameters
 TBBWA {
-    results_dir = "${params.outdir}/tbbwa"
+    results_dir = params.outdir
     save_mode = 'copy'
     should_publish = true
 }
 
 TBREFINE {
-    results_dir = "${params.outdir}/tbrefine"
+    results_dir = params.outdir
     save_mode = 'copy'
     should_publish = true
 }
 
 TBPILE {
-    results_dir = "${params.outdir}/tbpile"
+    results_dir = params.outdir
     save_mode = 'copy'
     should_publish = true
 }
 
 TBLIST {
-    results_dir = "${params.outdir}/tblist"
+    results_dir = params.outdir
     save_mode = 'copy'
     should_publish = true
     minbqual = 13
 }
 
 TBVARIANTS {
-    results_dir = "${params.outdir}/tbvariants"
+    results_dir = params.outdir
     save_mode = 'copy'
     should_publish = true
     mincovf = 4
@@ -54,14 +54,14 @@ TBVARIANTS {
 
 TBSTATS {
     project_name = params.project_name
-    results_dir = "${params.outdir}/tbstats"
+    results_dir = params.outdir
     save_mode = 'copy'
     should_publish = true
 }
 
 TBSTRAINS {
     project_name = params.project_name
-    results_dir = "${params.outdir}/tbstrains"
+    results_dir = params.outdir
     save_mode = 'copy'
     should_publish = true
     mincovf = 4
@@ -71,7 +71,7 @@ TBSTRAINS {
  }
 
 TBJOIN {
-    results_dir = "${params.outdir}/tbjoin"
+    results_dir = params.outdir
     save_mode = 'copy'
     should_publish = true
     project_name = params.project_name
@@ -82,8 +82,7 @@ TBJOIN {
  }
 
 TBAMEND {
-
-    results_dir = "${params.outdir}/tbamend"
+    results_dir = params.outdir
     save_mode = 'copy'
     should_publish = true
     project_name = params.project_name
@@ -97,14 +96,14 @@ TBAMEND {
  }
 
 TBGROUPS {
-    results_dir = "${params.outdir}/tbgroups"
+    results_dir = params.outdir
     save_mode = 'copy'
     should_publish = true
     project_name = params.project_name
 }
 
 TBFULL {
-    results_dir = "${params.outdir}/tbfull"
+    results_dir = params.outdir
     save_mode = 'copy'
     should_publish = true
     minbqual = 13
@@ -130,7 +129,7 @@ TBFULL {
 }
 
 RENAME_FILES {
-    results_dir = "${params.outdir}/utils/rename_files"
+    results_dir = "${params.outdir}/rename_files"
     save_mode = 'copy'
     should_publish = true
 }
