test dynamic workflow invocation

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -1,7 +1,10 @@
+run_type = "local"
+analysis_mode = "parallel"
+
 genomeIds = ["ERR841438", "ERR841440"]
 
 // NCBI API key
-apiKey = ""
+ncbi_api_key = ""
 
 library_name = "somelib"
 
