Globals params, batch and parallel workflow, real world testing (#26)

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -1,20 +1,72 @@
-TBBWA {}
-TBREFINE {}
-TBPILE {}
+run_type = "local"
+analysis_mode = "parallel"
+
+genomeIds = ["ERR841438", "ERR841440"]
+
+// NCBI API key
+ncbi_api_key = ""
+
+library_name = "somelib"
+
+outdir = "/scratch/results"
+
+user = "root"
+
+project_name = "prj"
+
+local_location = "/scratch/data/multiple_samples" // single_sample OR multiple_samples
+
+samplesheet_name = "${params.project_name}_samples.tsv"
+
+
+// Module level parameters
+TBBWA {
+    results_dir = params.outdir
+    save_mode = 'copy'
+    should_publish = true
+}
+
+TBREFINE {
+    results_dir = params.outdir
+    save_mode = 'copy'
+    should_publish = true
+}
+
+TBPILE {
+    results_dir = params.outdir
+    save_mode = 'copy'
+    should_publish = true
+}
 
 TBLIST {
+    results_dir = params.outdir
+    save_mode = 'copy'
+    should_publish = true
     minbqual = 13
- }
+}
 
 TBVARIANTS {
+    results_dir = params.outdir
+    save_mode = 'copy'
+    should_publish = true
     mincovf = 4
     mincovr = 4
     minphred = 4
     minfreq = 75
  }
 
-TBSTATS {}
+TBSTATS {
+    project_name = params.project_name
+    results_dir = params.outdir
+    save_mode = 'copy'
+    should_publish = true
+}
+
 TBSTRAINS {
+    project_name = params.project_name
+    results_dir = params.outdir
+    save_mode = 'copy'
+    should_publish = true
     mincovf = 4
     mincovr = 4
     minphred = 4
@@ -22,7 +74,10 @@ TBSTRAINS {
  }
 
 TBJOIN {
-    project_name = "mtbseq"
+    results_dir = params.outdir
+    save_mode = 'copy'
+    should_publish = true
+    project_name = params.project_name
     mincovf = 4
     mincovr = 4
     minphred = 4
@@ -30,7 +85,10 @@ TBJOIN {
  }
 
 TBAMEND {
-    project_name = "mtbseq"
+    results_dir = params.outdir
+    save_mode = 'copy'
+    should_publish = true
+    project_name = params.project_name
     mincovf = 4
     mincovr = 4
     minphred = 4
@@ -41,13 +99,40 @@ TBAMEND {
  }
 
 TBGROUPS {
-    project_name = "mtbseq"
+    results_dir = params.outdir
+    save_mode = 'copy'
+    should_publish = true
+    project_name = params.project_name
 }
 
 TBFULL {
+    results_dir = params.outdir
+    save_mode = 'copy'
+    should_publish = true
     minbqual = 13
     mincovf = 4
     mincovr = 4
     minphred = 4
     minfreq = 75
+    unambig = 95
+    window = 12
+    distance = 12
+
+// samples
+// project
+// ref
+// resilist
+// intregions
+// categories
+// basecalib
+// all
+// snp
+// lowfreq
+// quiet
+}
+
+RENAME_FILES {
+    results_dir = "${params.outdir}/rename_files"
+    save_mode = 'copy'
+    should_publish = true
 }
