--- a/nextflow.config
+++ b/nextflow.config
@@ -1,12 +1,12 @@
 manifest {
-    name = 'MTBSeq packaged as a Nextflow Workflow for usability and sensible defaults.'
-    description = 'Workflow for the MTBSeq for analysis of Mycobacterium tuberculosis.'
+    name = 'MTBseq-nf'
+    description = 'MTBSeq packaged as a Nextflow Workflow for usability and sensible defaults'
     version = '1.0.0'
-    author = 'Emilyn Costa Conceição <emilyncosta@gmail.com> ; Abhinav Sharma <abhi18av@outlook.com>;  Davi Josué Marcon <davijosuemarcon@gmail.com>'
+    author = 'Emilyn Costa Conceição <emilyncosta@gmail.com>; Abhinav Sharma <abhi18av@outlook.com>;  Davi Josué Marcon <davijosuemarcon@gmail.com>'
     mainScript = 'main.nf'
 }
 
-params {includeConfig 'conf/global_params.config'}
+params { includeConfig 'conf/global_params.config' }
 
 profiles {
     standard { includeConfig 'conf/standard.config' }
