format files using intellij

--- a/conf/conda.config
+++ b/conf/conda.config
@@ -1,6 +1,6 @@
 process {
     withName:
-        ".*" {
-        conda = "mtbseq"
-            }
+    ".*" {
+        conda = 'bioconda::mtbseq:1.0.3'
     }
+}
