--- a/conf/standard.config
+++ b/conf/standard.config
@@ -5,8 +5,8 @@ params {
 }
 
 process {
-    errorStrategy = 'retry'
-    maxRetries = 3
+    errorStrategy = { task.attempt < 3 ? 'retry' : 'terminate' }
+    maxRetries = 2
 
     withName:
     "TBREFINE" {
